fixed frog jump -- experiment

--- a/react-vite/src/components/HomePage/HomePage.css
+++ b/react-vite/src/components/HomePage/HomePage.css
@@ -30,7 +30,7 @@
     height: 30vh;
     /* animation: spin 2s linear infinite; */
     /* animation: updown 1.5s linear infinite; */
-    animation: hop-around 1s linear infinite;
+    animation: hop-around 2.5s linear infinite;
 
 }
 
@@ -95,70 +95,70 @@
     0% {
         transform: translate(0px, 0px);
     }
-    10% {
+    5% {
         transform: translate(100px, -180px);
     }
-    20% {
+    10% {
         transform: translate(200px, -320px);
     }
-    30% {
+    15% {
         transform: translate(300px, -420px);
     }
-    40% {
+    20% {
         transform: translate(400px, -480px);
     }
-    50% {
+    25% {
         transform: translate(500px, -500px);
     }
-    60% {
+    30% {
         transform: translate(600px, -480px);
     }
-    70% {
+    35% {
         transform: translate(700px, -420px);
     }
-    80% {
+    40% {
         transform: translate(800px, -320px);
     }
-    90% {
+    45% {
         transform: translate(900px, -180px);
     }
-    100% {
+    50% {
         transform: translate(1000px, 0px);
     }
     /* hop back */
-    100% {
+    55% {
         transform: translate(1000px, 0px);
     }
-    90% {
+    60% {
         transform: translate(900px, -180px);
     }
-    80% {
+    65% {
         transform: translate(800px, -320px);
     }
     70% {
         transform: translate(700px, -420px);
     }
-    60% {
+    75% {
         transform: translate(600px, -480px);
     }
-    50% {
+    80% {
         transform: translate(500px, -500px);
     }
-    40% {
+    85% {
         transform: translate(400px, -480px);
     }
-    30% {
+    90% {
         transform: translate(300px, -420px);
     }
-    20% {
+    95% {
         transform: translate(200px, -320px);
     }
-    90% {
+    100% {
         transform: translate(100px, -180px);
     }
-    100% {
+    /* 100% {
         transform: translate(0px, 0px);
-    }
+    } */
 }
 
 
